<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".activities.HomeActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:title="@string/app_name"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_menu"
        android:elevation="4dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/primary">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:padding="24dp"
            android:fontFamily="sans-serif-medium"
            />
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/mapSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:queryHint="Rechercher un lieu..." />


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:background="@android:color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_button"
        android:textColor="@android:color/white"
        app:cornerRadius="8dp"
        app:backgroundTint="@color/error"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        app:icon="@drawable/ic_logout"
        app:iconPadding="8dp"
        app:iconGravity="textStart" />

</LinearLayout>
